2016-02-28 John Wu <John dot Wu at ACM dot org>
	* NEWS: update for the new release 2.0.3

2016-01-31 John Wu <John dot Wu at ACM dot org>
	* src/util.h: rename ibis::util::cleanDatasets to ibis::util::emptyCache
	* src/part.cpp, src/query.cpp, src/filter.cpp: add calls to
	ibis::util::emptyCache (previously, cleanDatasets)

2016-01-29 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: in util::readDouble check the length of the string
	before comparing against the constants
	* src/part.cpp: throw exception rather than return a negative
	error code after failing to allocate memory
	* src/query.h, src/query.cpp: add function storeErrorMesg,
	intending to record error message composed with ibis::util::logger
	* src/util.h: add member functions str and c_str to
	bis::util::logger class

2016-01-28 John Wu <John dot Wu at ACM dot org>
	* examples/thula.cpp: add statements to print out the command line
	arguments to aid debugging of trouble reported by check-sq2
	* src/fileManager.cpp, src/bundle.cpp: change all message prefix
	"Error" to "Warning"
	* src/bundle.cpp: in bundles::sort check every column for the
	minimum number of rows

2016-01-27 John Wu <John dot Wu at ACM dot org>
	* win/FlexLexer.h: use the new version from macPorts for flex 3.0
	* src/fromParser.yy, src/selectParser.yy, src/whereParser.yy:
	require bison version 2.7 and newer, use define api.namespace (the
	default flex and bison coming with Mac OS X is too old, the
	versions from macPorts have deprecated the previous macros used)
	* tests/readcsv.cpp: return -1 from readALine instead of 0

2016-01-26 John Wu <John dot Wu at ACM dot org>
	* contrib/fbmerge/fbmerge.cpp: include <unistd.h> for getopt
	* tests/Makefile.am: add flag -w to diff commands to ignore white
	spaces in comparisons
	* tests/readcsv.cpp: represent long integers as double or string
	based on the number of digits (characters) used, previous version
	was relative to sizeof(int)
	* src/*: update copyright year