@@ -28,36 +28,6 @@
 -10, 112.125
 -10, 112.125
 -10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
--10, 112.125
 -10, 112
 -10, 112
 -10, 112
@@ -88,6 +58,66 @@
 -10, 112
 -10, 112
 -10, 112
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10, 111.875
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
+-10.125, 112.125
 -10.125, 112
 -10.125, 112
 -10.125, 112
@@ -118,36 +148,6 @@
 -10.125, 112
 -10.125, 112
 -10.125, 112
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
--10.125, 111.875
 -10.125, 111.875
 -10.125, 111.875
 -10.125, 111.875
